2006-01-08  Karl Runge <runge@karlrunge.com>
	* x11vnc: the big split. opts: -afteraccept and -passwdfile read:

2005-12-24  Karl Runge <runge@karlrunge.com>
	* x11vnc: enhance -passwdfile features, filetransfer on by default,
	  call rfbRegisterTightVNCFileTransferExtension() earlier.

2005-11-28  Karl Runge <runge@karlrunge.com>
	* x11vnc: add -loop option.

2005-11-25  Karl Runge <runge@karlrunge.com>
	* x11vnc: throttle load if fb update requests not taking place.
	* misc/x11vnc_pw: add utility script

2005-10-22  Karl Runge <runge@karlrunge.com>
	* add tightVNC FileTransfer (-filexfer) and -DFILEXFER=1
	* -slow_fb for special purpose infrequent polling.
	* make -blackout work with copyrect clipping.
	* -blackout noptr,WxH+X+Y,... to prevent pointer from going
	  into a blacked out region.

2005-07-17  Karl Runge <runge@karlrunge.com>
	* more improvements to gui UE.  gui requests via client_sock
	  PASSWD_REQUIRED and PASSWD_UNLESS_NOPW build options.

2005-07-12  Karl Runge <runge@karlrunge.com>
	* gui: remove nevershared etc., parse cmd line, bug fixes.
	* x11vnc: fix pointer queue buildup under -viewonly.

2005-07-10  Karl Runge <runge@karlrunge.com>
	* more improvements to gui, default values, save-settings..
	* x11vnc scary password warnings. Release settings. -QD option.
	  add \# to rc files and fix rcfile read bug.

2005-07-09  Karl Runge <runge@karlrunge.com>
	* add -grab_buster helper thread to break up grabs (might not be
	  need any longer due to gett XFlush-ing).  Fix scrolls and
	  copyrect for -clip and -id cases.

2005-07-06  Karl Runge <runge@karlrunge.com>
	* many improvements to the gui. now embeds into system tray ok.
	  x11vnc -debug_grabs, -printgui, -nosync

2005-07-01  Karl Runge <runge@karlrunge.com>
	* support for simple "-gui tray" mode (small icon like the original
	  x0rfbserver had).  Can't figure how to get a tray to swallow it..
	* passwd, viewpasswd changing in tray mode.
	* allow typos like: x11vnc -R -scale 3/4
