@@ -2,7 +2,7 @@
 .TH X11VNC "1" "January 2006" "x11vnc " "User Commands"
 .SH NAME
 x11vnc - allow VNC connections to real X11 displays
-         version: 0.7.3, lastmod: 2006-01-08
+         version: 0.7.3, lastmod: 2006-01-10
 .SH SYNOPSIS
 .B x11vnc
 [OPTION]...
