@@ -1,3 +1,7 @@
+2006-01-11  Karl Runge <runge@karlrunge.com>
+	* x11vnc: close fd > 2 in run_user_command(), -nocmds in crash_debug,
+	  fix 64bit bug for -solid.
+
 2006-01-08  Karl Runge <runge@karlrunge.com>
 	* x11vnc: the big split. opts: -afteraccept and -passwdfile read:
 
